--- a/DA/notebooks/regression-checkpoint.ipynb
+++ b/DA/notebooks/regression-checkpoint.ipynb
@@ -12,7 +12,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\SW\\AppData\\Local\\Temp\\ipykernel_17632\\1378052945.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\SW\\AppData\\Local\\Temp\\ipykernel_17864\\1378052945.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -323,25 +323,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "2d7ce4a7-1efd-48d9-8f70-883ca384cbd7",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m lead \u001b[38;5;241m=\u001b[39m df1[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mleadtime\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m----> 2\u001b[0m mean \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mmean(lead)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# 분산 계산\u001b[39;00m\n\u001b[0;32m      5\u001b[0m variance \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mvar(lead)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "평균: 75.87961202904908\n",
+      "분산: 4859.405207472425\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
     "lead = df1['leadtime']\n",
     "mean = np.mean(lead)\n",
     "\n",
@@ -3493,7 +3491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "41df1b81-6080-46ac-8d30-a4e78cfcc693",
    "metadata": {
     "tags": []
@@ -3503,7 +3501,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\SW\\AppData\\Local\\Temp\\ipykernel_17632\\1378052945.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\SW\\AppData\\Local\\Temp\\ipykernel_19368\\1378052945.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3522,143 +3520,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "79bc13d3-0152-41ba-99a4-65f7fb754498",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(                    청구서번호  No.   \n",
-       " 0      ELS-BS-ESP-2004002   12  \\\n",
-       " 1      OCA-BS-ESP-2010004    5   \n",
-       " 2      MIR-BS-ESP-2011002  119   \n",
-       " 3      BLO-BS-ESP-2003002   16   \n",
-       " 4      DEO-BS-ESP-2105008   97   \n",
-       " ...                   ...  ...   \n",
-       " 20512  BLO-BS-ESP-2006006    1   \n",
-       " 20513  BLO-BS-ESP-2004008    1   \n",
-       " 20514  ELS-BS-ESP-1908002    2   \n",
-       " 20515  BLO-BS-ESP-1906014    2   \n",
-       " 20516  BLO-BS-ESP-1906014    3   \n",
-       " \n",
-       "                                                  Subject   \n",
-       " 0                           NO.1 A/E C18 MAJOR O/H PARTS  \\\n",
-       " 1                   운전시간 대비 #2 AUX ENG TOP END O/H PARTS   \n",
-       " 2          운전시간 대비 #2 AUX ENG(CAT 3512C) MAJOR O/H PARTS   \n",
-       " 3                           #1 AUX ENG TOP END O/H PARTS   \n",
-       " 4                                        DEO-E-210512-01   \n",
-       " ...                                                  ...   \n",
-       " 20512  BLO-F-ENGINE-200515-03 BOAT DAVIT CYL 외, AIRCO...   \n",
-       " 20513  BLO-F-ENGINE-200403-01 (NAVI DECK CRANE DERRIN...   \n",
-       " 20514                                ELS-F-ENG-190628-02   \n",
-       " 20515            BLO-F-ENGINE-190617-01 (NET BOAT PARTS)   \n",
-       " 20516            BLO-F-ENGINE-190617-01 (NET BOAT PARTS)   \n",
-       " \n",
-       "                    Machinery                              Assembly   \n",
-       " 0      NO.1 GENERATOR ENGINE               323-6480 LINES GP-FUEL   \\\n",
-       " 1      NO.2 GENERATOR ENGINE                            GASKET KIT   \n",
-       " 2      NO.2 GENERATOR ENGINE             285-8374 MANIFOLD GP-EXH    \n",
-       " 3      NO.1 GENERATOR ENGINE                     159-8828 TURBO GP   \n",
-       " 4      NO.1 GENERATOR ENGINE             2N4727 INSTRUMNT PANEL GP   \n",
-       " ...                      ...                                   ...   \n",
-       " 20512            HYD. SYSTEM  5-753-2E_BOAT DAVIT & N.D CRANE LINE   \n",
-       " 20513            HYD. SYSTEM  5-753-2E_BOAT DAVIT & N.D CRANE LINE   \n",
-       " 20514            6M NET BOAT                       ELECTRIC CLUTCH   \n",
-       " 20515            7M NET BOAT        HAND HYDRAULIC STEERING SYSTEM   \n",
-       " 20516            7M NET BOAT        HAND HYDRAULIC STEERING SYSTEM   \n",
-       " \n",
-       "                                       청구품목                     Part No.1   \n",
-       " 0                         SEAL-O-RING-STOR                     7.00E-275  \\\n",
-       " 1                       OIL COOLER & LINES                     7.00E-275   \n",
-       " 2                                   WASHER                     7.00E-275   \n",
-       " 3                           BOLT-HIGH TEMP                     7.00E-275   \n",
-       " 4                                     SEAL                     7.00E-275   \n",
-       " ...                                    ...                           ...   \n",
-       " 20512         HYD. CYLINDER_NET BOAT DAVIT            φ150 × φ85 × 695st   \n",
-       " 20513  HYD. CYLINDER_N.D CRANE_BOOM_LIFTER          φ160 × φ112 × 1130st   \n",
-       " 20514                                PULLY                     Φ305X5V-3   \n",
-       " 20515                            CYLINDER            Φ50 x S195 CYLINDER   \n",
-       " 20516                SEAL KIT FOR CYLINDER  Φ50 x S195 CYLINDER SEAL KIT   \n",
-       " \n",
-       "                        Part No.2                                         key1   \n",
-       " 0                              0                                    7.00E-275  \\\n",
-       " 1                              0                                    7.00E-275   \n",
-       " 2                              0                                    7.00E-275   \n",
-       " 3                              0                                    7.00E-275   \n",
-       " 4                              0                                    7.00E-275   \n",
-       " ...                          ...                                          ...   \n",
-       " 20512  FF-SE-1CB150BB695ABD-YP2J  φ150 × φ85 × 695stFF-SE-1CB150BB695ABD-YP2J   \n",
-       " 20513       S-2CA160A20.6N1130-1     φ160 × φ112 × 1130stS-2CA160A20.6N1130-1   \n",
-       " 20514                          0                                    Φ305X5V-3   \n",
-       " 20515                          0                          Φ50 x S195 CYLINDER   \n",
-       " 20516                          0                 Φ50 x S195 CYLINDER SEAL KIT   \n",
-       " \n",
-       "            key2  ...  Control No.  입고창고        창고출고  창고출고수량 출고선박   \n",
-       " 0        COOLER  ...        혜인 발주    BS  2020-09-19       1  BLO  \\\n",
-       " 1        COOLER  ...        혜인 발주    BS  2020-09-18       1  JBG   \n",
-       " 2        COOLER  ...            0    BS  2020-12-12       1  BON   \n",
-       " 3        COOLER  ...        혜인 발주    BS  2021-06-16       1  MIR   \n",
-       " 4        COOLER  ...            0    BS           0       0    0   \n",
-       " ...         ...  ...          ...   ...         ...     ...  ...   \n",
-       " 20512  CYLINDER  ...    20-09-161    BW           0       0    0   \n",
-       " 20513  CYLINDER  ...    20-07-114    BW  2020-08-26       1  BLO   \n",
-       " 20514      BELT  ...    19-08-164    BW  2019-09-04       1  ELS   \n",
-       " 20515  CYLINDER  ...    19-07-134    BW  2019-08-20       1  BLO   \n",
-       " 20516  CYLINDER  ...    19-07-134    BW  2019-08-20       2  BLO   \n",
-       " \n",
-       "                 출고운반선        선박입고 선박입고수량 완료 여부  leadtime  \n",
-       " 0               본선 선적           0      0     0       194  \n",
-       " 1               본선 선적           0      0     0        59  \n",
-       " 2      SANWA FONTAINE           0      0     0        61  \n",
-       " 3           체항수리 시 사용           0      0     0       212  \n",
-       " 4                   0           0      0     0       220  \n",
-       " ...               ...         ...    ...   ...       ...  \n",
-       " 20512               0           0      0     0        95  \n",
-       " 20513      BLO 상가시 선적           0      0     0        67  \n",
-       " 20514         ONENESS  2019-10-02      1    완료        25  \n",
-       " 20515        세이셀 컨테이너  2019-10-12      1    완료        25  \n",
-       " 20516        세이셀 컨테이너  2019-10-12      2    완료        25  \n",
-       " \n",
-       " [20517 rows x 36 columns],\n",
-       "                                       청구품목      key2  leadtime 견적화폐   \n",
-       " 0                         SEAL-O-RING-STOR    COOLER       194  KRW  \\\n",
-       " 1                       OIL COOLER & LINES    COOLER        59  KRW   \n",
-       " 2                                   WASHER    COOLER        61  KRW   \n",
-       " 3                           BOLT-HIGH TEMP    COOLER       212  KRW   \n",
-       " 4                                     SEAL    COOLER       220  KRW   \n",
-       " ...                                    ...       ...       ...  ...   \n",
-       " 20512         HYD. CYLINDER_NET BOAT DAVIT  CYLINDER        95  JPY   \n",
-       " 20513  HYD. CYLINDER_N.D CRANE_BOOM_LIFTER  CYLINDER        67  JPY   \n",
-       " 20514                                PULLY      BELT        25  JPY   \n",
-       " 20515                            CYLINDER   CYLINDER        25  JPY   \n",
-       " 20516                SEAL KIT FOR CYLINDER  CYLINDER        25  JPY   \n",
-       " \n",
-       "                                     발주처  \n",
-       " 0              HAEIN Coporation_Cheonan  \n",
-       " 1              HAEIN Coporation_Cheonan  \n",
-       " 2              HAEIN Coporation_Cheonan  \n",
-       " 3              HAEIN Coporation_Cheonan  \n",
-       " 4              HAEIN Coporation_Cheonan  \n",
-       " ...                                 ...  \n",
-       " 20512          MARINE HYDROTEC CO.,LTD.  \n",
-       " 20513          MARINE HYDROTEC CO.,LTD.  \n",
-       " 20514  PORT RELIEF ENGINEERING CO.,LTD.  \n",
-       " 20515  PORT RELIEF ENGINEERING CO.,LTD.  \n",
-       " 20516  PORT RELIEF ENGINEERING CO.,LTD.  \n",
-       " \n",
-       " [20517 rows x 5 columns])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df, df1"
+    "# df, df1"
    ]
   },
   {
@@ -3671,7 +3540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "eb63ee16-4878-49c7-bc0f-28b06f20b667",
    "metadata": {
     "tags": []
