--- a/DA/notebooks/classification_leadtime.ipynb
+++ b/DA/notebooks/classification_leadtime.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "a270de45-d6da-4201-8949-27cf76c6c0ed",
    "metadata": {
     "tags": []
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "9bd857ee-8892-4bd5-aac5-38543d686c65",
    "metadata": {
     "tags": []
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "72f998fd-7020-40cc-a6ed-0fbafbf720e7",
    "metadata": {
     "tags": []
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "e0b88d3a-4938-4ea3-9214-60a041cfa82f",
    "metadata": {
     "tags": []
@@ -106,7 +106,7 @@
        "      dtype=int64)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "625b54a9-174c-41a7-af5d-25ebce66bb94",
    "metadata": {
     "tags": []
@@ -159,7 +159,7 @@
        "Name: leadtime, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "445ff495-c0c9-4ca1-9998-3322ec795c82",
    "metadata": {
     "tags": []
@@ -212,7 +212,7 @@
        "Name: leadtime, dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "id": "e47802c9-7570-4c99-9c21-9eb32178659f",
    "metadata": {
     "tags": []
@@ -256,7 +256,7 @@
        "      dtype=int64)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "id": "a2c302ec-a56f-4129-b595-3bb0f67e640e",
    "metadata": {
     "tags": []
@@ -301,7 +301,7 @@
        "      dtype=int64)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "3081a01c-ca60-4e44-a82a-602194e38ddd",
    "metadata": {
     "tags": []
@@ -325,7 +325,7 @@
        "(273,)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "id": "a362a11a-ecb3-4d6f-9876-3efb295b08ab",
    "metadata": {
     "tags": []
@@ -453,7 +453,7 @@
        " 273)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "id": "5b21aba4-2972-4edd-bc9c-1c6b73c4b647",
    "metadata": {
     "tags": []
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "id": "60ea8425-c49b-4431-8a4d-d1cf46b4dbdf",
    "metadata": {
     "tags": []
@@ -505,7 +505,7 @@
        "((151011, 6), (151011,))"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "id": "fef906cd-0d05-4cfb-a617-6c702d7332a4",
    "metadata": {
     "tags": []
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "id": "1d4cc792-2ef9-431a-9396-2b0488c4ce90",
    "metadata": {
     "tags": []
@@ -573,22 +573,23 @@
        "              num_parallel_tree=None, objective='multi:softmax', ...)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import xgboost as xgb\n",
     "# xgboost 모델 생성\n",
     "model = xgb.XGBClassifier(objective='multi:softmax', num_class=273)\n",
     "\n",
     "# 모델 학습\n",
-    "model.fit(X_train, y_train)\n"
+    "model.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "id": "c23072af-d23a-454b-9f8e-c756028dc744",
    "metadata": {
     "tags": []
@@ -603,7 +604,6 @@
     }
    ],
    "source": [
-    "\n",
     "# 예측 결과 출력\n",
     "y_pred = model.predict(X_test)\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))"
@@ -611,11 +611,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "862e8d36-13a7-4e72-9b17-3dbd02ce65cc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.10644637949872529\n",
+      "Precision: 0.10644637949872529\n",
+      "Recall: 0.10644637949872529\n",
+      "F1 Score: 0.10644637949872529\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "\n",
+    "# 테스트 데이터에 대한 예측 수행\n",
+    "\n",
+    "# 정확도 계산\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "# 정밀도 계산\n",
+    "precision = precision_score(y_test, y_pred, average='micro')\n",
+    "\n",
+    "# 재현율 계산\n",
+    "recall = recall_score(y_test, y_pred, average='micro')\n",
+    "\n",
+    "# F1 스코어 계산\n",
+    "f1 = f1_score(y_test, y_pred, average='micro')\n",
+    "\n",
+    "# 결과 출력\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "print(\"Precision:\", precision)\n",
+    "print(\"Recall:\", recall)\n",
+    "print(\"F1 Score:\", f1)"
+   ]
   },
   {
    "cell_type": "code",
