--- a/DA/notebooks/classification_leadtime.ipynb
+++ b/DA/notebooks/classification_leadtime.ipynb
@@ -410,6 +410,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "54bb2418-ad9e-4a74-87bc-6c81838e6a18",
    "metadata": {},
