검색 드롭박스

--- a/DA/notebooks/regression.ipynb
+++ b/DA/notebooks/regression.ipynb
@@ -3394,7 +3394,7 @@
     "# 텍스트 데이터를 정수 시퀀스로 변환\n",
     "tokenizer = Tokenizer()\n",
     "tokenizer.fit_on_texts(X)\n",
-    "sequences = tokenizer.texts_to_sequences(X)\n"
+    "sequences = tokenizer.texts_to_sequences(X)"
    ]
   },
   {
@@ -3524,7 +3524,6 @@
     "scaler = StandardScaler()\n",
     "y_train = scaler.fit_transform(y_train.values.reshape(-1, 1))\n",
     "y_test = scaler.transform(y_test.values.reshape(-1, 1))\n",
-    "\n",
     "\n",
     "# 모델 구성\n",
     "# model = Sequential()\n",
@@ -4423,113 +4422,6 @@
    "source": [
     "from tensorflow.python.client import device_lib\n",
     "print(device_lib.list_local_devices())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "id": "b0e2f0ca-b22b-4463-b5ce-107539f0e558",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Could not install packages due to an OSError: [WinError 5] 액세스가 거부되었습니다: 'D:\\\\ShipSupplies\\\\venv\\\\Lib\\\\site-packages\\\\google\\\\~rotobuf\\\\internal\\\\_api_implementation.cp310-win_amd64.pyd'\n",
-      "Check the permissions.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: tensorflow in d:\\shipsupplies\\venv\\lib\\site-packages (2.10.0)\n",
-      "Collecting tensorflow\n",
-      "  Using cached tensorflow-2.12.0-cp310-cp310-win_amd64.whl (1.9 kB)\n",
-      "Requirement already satisfied: tensorflow-intel==2.12.0 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorflow) (2.12.0)\n",
-      "Requirement already satisfied: absl-py>=1.0.0 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow) (1.4.0)\n",
-      "Requirement already satisfied: astunparse>=1.6.0 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow) (1.6.3)\n",
-      "Requirement already satisfied: flatbuffers>=2.0 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow) (23.3.3)\n",
-      "Requirement already satisfied: gast<=0.4.0,>=0.2.1 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow) (0.4.0)\n",
-      "Requirement already satisfied: google-pasta>=0.1.1 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow) (0.2.0)\n",
-      "Requirement already satisfied: h5py>=2.9.0 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow) (3.8.0)\n",
-      "Requirement already satisfied: jax>=0.3.15 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow) (0.4.8)\n",
-      "Requirement already satisfied: libclang>=13.0.0 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow) (16.0.0)\n",
-      "Requirement already satisfied: numpy<1.24,>=1.22 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow) (1.23.5)\n",
-      "Requirement already satisfied: opt-einsum>=2.3.2 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow) (3.3.0)\n",
-      "Requirement already satisfied: packaging in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow) (23.1)\n",
-      "Collecting protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<5.0.0dev,>=3.20.3 (from tensorflow-intel==2.12.0->tensorflow)\n",
-      "  Downloading protobuf-4.23.2-cp310-abi3-win_amd64.whl (422 kB)\n",
-      "                                              0.0/422.5 kB ? eta -:--:--\n",
-      "     --------------------                   225.3/422.5 kB 6.7 MB/s eta 0:00:01\n",
-      "     -------------------------------------- 422.5/422.5 kB 6.5 MB/s eta 0:00:00\n",
-      "Requirement already satisfied: setuptools in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow) (65.5.0)\n",
-      "Requirement already satisfied: six>=1.12.0 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow) (1.16.0)\n",
-      "Requirement already satisfied: termcolor>=1.1.0 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow) (2.3.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.6.6 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow) (4.5.0)\n",
-      "Requirement already satisfied: wrapt<1.15,>=1.11.0 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow) (1.14.1)\n",
-      "Requirement already satisfied: grpcio<2.0,>=1.24.3 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow) (1.54.0)\n",
-      "Collecting tensorboard<2.13,>=2.12 (from tensorflow-intel==2.12.0->tensorflow)\n",
-      "  Downloading tensorboard-2.12.3-py3-none-any.whl (5.6 MB)\n",
-      "                                              0.0/5.6 MB ? eta -:--:--\n",
-      "     --                                       0.3/5.6 MB 10.6 MB/s eta 0:00:01\n",
-      "     -----                                    0.7/5.6 MB 11.1 MB/s eta 0:00:01\n",
-      "     -------                                  1.1/5.6 MB 11.7 MB/s eta 0:00:01\n",
-      "     -----------                              1.6/5.6 MB 11.4 MB/s eta 0:00:01\n",
-      "     ---------------                          2.2/5.6 MB 12.7 MB/s eta 0:00:01\n",
-      "     --------------------                     2.9/5.6 MB 14.0 MB/s eta 0:00:01\n",
-      "     -------------------------                3.6/5.6 MB 15.4 MB/s eta 0:00:01\n",
-      "     -------------------------------          4.5/5.6 MB 16.0 MB/s eta 0:00:01\n",
-      "     ---------------------------------------  5.5/5.6 MB 17.6 MB/s eta 0:00:01\n",
-      "     ---------------------------------------- 5.6/5.6 MB 16.4 MB/s eta 0:00:00\n",
-      "Collecting tensorflow-estimator<2.13,>=2.12.0 (from tensorflow-intel==2.12.0->tensorflow)\n",
-      "  Using cached tensorflow_estimator-2.12.0-py2.py3-none-any.whl (440 kB)\n",
-      "Collecting keras<2.13,>=2.12.0 (from tensorflow-intel==2.12.0->tensorflow)\n",
-      "  Using cached keras-2.12.0-py2.py3-none-any.whl (1.7 MB)\n",
-      "Requirement already satisfied: tensorflow-io-gcs-filesystem>=0.23.1 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow) (0.31.0)\n",
-      "Requirement already satisfied: wheel<1.0,>=0.23.0 in d:\\shipsupplies\\venv\\lib\\site-packages (from astunparse>=1.6.0->tensorflow-intel==2.12.0->tensorflow) (0.40.0)\n",
-      "Requirement already satisfied: ml-dtypes>=0.0.3 in d:\\shipsupplies\\venv\\lib\\site-packages (from jax>=0.3.15->tensorflow-intel==2.12.0->tensorflow) (0.1.0)\n",
-      "Requirement already satisfied: scipy>=1.7 in d:\\shipsupplies\\venv\\lib\\site-packages (from jax>=0.3.15->tensorflow-intel==2.12.0->tensorflow) (1.10.1)\n",
-      "Requirement already satisfied: google-auth<3,>=1.6.3 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow) (2.17.3)\n",
-      "Collecting google-auth-oauthlib<1.1,>=0.5 (from tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow)\n",
-      "  Using cached google_auth_oauthlib-1.0.0-py2.py3-none-any.whl (18 kB)\n",
-      "Requirement already satisfied: markdown>=2.6.8 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow) (3.4.3)\n",
-      "Requirement already satisfied: requests<3,>=2.21.0 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow) (2.29.0)\n",
-      "Collecting tensorboard-data-server<0.8.0,>=0.7.0 (from tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow)\n",
-      "  Using cached tensorboard_data_server-0.7.0-py3-none-any.whl (2.4 kB)\n",
-      "Requirement already satisfied: werkzeug>=1.0.1 in d:\\shipsupplies\\venv\\lib\\site-packages (from tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow) (2.3.3)\n",
-      "Requirement already satisfied: cachetools<6.0,>=2.0.0 in d:\\shipsupplies\\venv\\lib\\site-packages (from google-auth<3,>=1.6.3->tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow) (5.3.0)\n",
-      "Requirement already satisfied: pyasn1-modules>=0.2.1 in d:\\shipsupplies\\venv\\lib\\site-packages (from google-auth<3,>=1.6.3->tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow) (0.3.0)\n",
-      "Requirement already satisfied: rsa<5,>=3.1.4 in d:\\shipsupplies\\venv\\lib\\site-packages (from google-auth<3,>=1.6.3->tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow) (4.9)\n",
-      "Requirement already satisfied: requests-oauthlib>=0.7.0 in d:\\shipsupplies\\venv\\lib\\site-packages (from google-auth-oauthlib<1.1,>=0.5->tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow) (1.3.1)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in d:\\shipsupplies\\venv\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow) (3.1.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in d:\\shipsupplies\\venv\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow) (3.4)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in d:\\shipsupplies\\venv\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow) (1.26.15)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in d:\\shipsupplies\\venv\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow) (2022.12.7)\n",
-      "Requirement already satisfied: MarkupSafe>=2.1.1 in d:\\shipsupplies\\venv\\lib\\site-packages (from werkzeug>=1.0.1->tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow) (2.1.2)\n",
-      "Requirement already satisfied: pyasn1<0.6.0,>=0.4.6 in d:\\shipsupplies\\venv\\lib\\site-packages (from pyasn1-modules>=0.2.1->google-auth<3,>=1.6.3->tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow) (0.5.0)\n",
-      "Requirement already satisfied: oauthlib>=3.0.0 in d:\\shipsupplies\\venv\\lib\\site-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<1.1,>=0.5->tensorboard<2.13,>=2.12->tensorflow-intel==2.12.0->tensorflow) (3.2.2)\n",
-      "Installing collected packages: tensorflow-estimator, tensorboard-data-server, protobuf, keras, google-auth-oauthlib, tensorboard, tensorflow\n",
-      "  Attempting uninstall: tensorflow-estimator\n",
-      "    Found existing installation: tensorflow-estimator 2.10.0\n",
-      "    Uninstalling tensorflow-estimator-2.10.0:\n",
-      "      Successfully uninstalled tensorflow-estimator-2.10.0\n",
-      "  Attempting uninstall: tensorboard-data-server\n",
-      "    Found existing installation: tensorboard-data-server 0.6.1\n",
-      "    Uninstalling tensorboard-data-server-0.6.1:\n",
-      "      Successfully uninstalled tensorboard-data-server-0.6.1\n",
-      "  Attempting uninstall: protobuf\n",
-      "    Found existing installation: protobuf 3.19.6\n",
-      "    Uninstalling protobuf-3.19.6:\n",
-      "      Successfully uninstalled protobuf-3.19.6\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install --upgrade tensorflow"
    ]
   },
   {
