--- a/DA/notebooks/reggre.ipynb
+++ b/DA/notebooks/reggre.ipynb
@@ -499,7 +499,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "venv1",
    "language": "python",
    "name": "venv"
   },
