--- a/DA/notebooks/classification_leadtime.ipynb
+++ b/DA/notebooks/classification_leadtime.ipynb
@@ -410,7 +410,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "54bb2418-ad9e-4a74-87bc-6c81838e6a18",
    "metadata": {},
@@ -787,9 +786,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv1",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
