시퀀스 토크나이저

--- a/DA/notebooks/classification_deeplearning.ipynb
+++ b/DA/notebooks/classification_deeplearning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "2f6b6b1c-7b25-412b-b153-01432bb58d2d",
    "metadata": {
     "tags": []
@@ -11,12 +11,13 @@
    "source": [
     "import pandas as pd\n",
     "# data = pd.read_csv('D:/ShipSupplies/DA/data/raw.csv')\n",
-    "data = pd.read_csv('../data/동원산업통합_분류_1_RE.csv', encoding = 'cp949')"
+    "# data = pd.read_csv('../data/동원산업통합_분류_1_RE.csv', encoding = 'cp949')\n",
+    "data = pd.read_csv('../data/raw_postpro.csv', encoding = 'cp949')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "4f9ffb05-5807-4a24-a4d1-fb407832c071",
    "metadata": {
     "tags": []
@@ -26,41 +27,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "청구서번호              0\n",
-      "No.                0\n",
-      "Subject           22\n",
-      "Machinery          0\n",
-      "Assembly           0\n",
-      "청구품목               0\n",
-      "Part No.1          0\n",
-      "Part No.2      17747\n",
-      "key1               0\n",
-      "key2               0\n",
-      "리드타임_음수제거          0\n",
-      "청구량              118\n",
-      "견적               283\n",
-      "견적수량             118\n",
-      "견적화폐             118\n",
-      "견적단가               0\n",
-      "발주번호               0\n",
-      "발주처              118\n",
-      "발주               118\n",
-      "발주수량             118\n",
-      "발주금액             118\n",
-      "D/T             1090\n",
-      "미입고 기간         21084\n",
-      "리드타임               0\n",
-      "창고입고               0\n",
-      "창고입고수량             0\n",
-      "Control No.     6126\n",
-      "입고창고               0\n",
-      "창고출고            1663\n",
-      "창고출고수량             0\n",
-      "출고선박            1663\n",
-      "출고운반선           1663\n",
-      "선박입고           15427\n",
-      "선박입고수량             0\n",
-      "완료 여부          15439\n",
+      "청구서번호          0\n",
+      "No.            0\n",
+      "Subject        0\n",
+      "Machinery      0\n",
+      "Assembly       0\n",
+      "청구품목           0\n",
+      "Part No.1      0\n",
+      "Part No.2      0\n",
+      "key1           0\n",
+      "key2           0\n",
+      "리드타임_음수제거      0\n",
+      "청구량            0\n",
+      "견적             0\n",
+      "견적수량           0\n",
+      "견적화폐           0\n",
+      "견적단가           0\n",
+      "발주번호           0\n",
+      "발주처            0\n",
+      "발주             0\n",
+      "발주수량           0\n",
+      "발주금액           0\n",
+      "D/T            0\n",
+      "미입고 기간         0\n",
+      "리드타임           0\n",
+      "창고입고           0\n",
+      "창고입고수량         0\n",
+      "Control No.    0\n",
+      "입고창고           0\n",
+      "창고출고           0\n",
+      "창고출고수량         0\n",
+      "출고선박           0\n",
+      "출고운반선          0\n",
+      "선박입고           0\n",
+      "선박입고수량         0\n",
+      "완료 여부          0\n",
       "dtype: int64\n"
      ]
     }
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "4d227c8b-4028-401f-a660-cf81d4164596",
    "metadata": {
     "tags": []
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "8e6a7156-fc3d-414d-96fa-d20b5c2584a2",
    "metadata": {
     "tags": []
@@ -97,43 +98,43 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 21084 entries, 0 to 21083\n",
+      "RangeIndex: 20517 entries, 0 to 20516\n",
       "Data columns (total 31 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   청구서번호        21084 non-null  object \n",
-      " 1   No.          21084 non-null  int64  \n",
-      " 2   Subject      21062 non-null  object \n",
-      " 3   Machinery    21084 non-null  object \n",
-      " 4   Assembly     21084 non-null  object \n",
-      " 5   청구품목         21084 non-null  object \n",
-      " 6   Part No.1    21084 non-null  object \n",
-      " 7   key1         21084 non-null  object \n",
-      " 8   key2         21084 non-null  object \n",
-      " 9   리드타임_음수제거    21084 non-null  int64  \n",
-      " 10  청구량          20966 non-null  float64\n",
-      " 11  견적           20801 non-null  object \n",
-      " 12  견적수량         20966 non-null  float64\n",
-      " 13  견적화폐         20966 non-null  object \n",
-      " 14  견적단가         21084 non-null  object \n",
-      " 15  발주번호         21084 non-null  object \n",
-      " 16  발주처          20966 non-null  object \n",
-      " 17  발주           20966 non-null  object \n",
-      " 18  발주수량         20966 non-null  float64\n",
-      " 19  발주금액         20966 non-null  object \n",
-      " 20  D/T          19994 non-null  object \n",
-      " 21  리드타임         21084 non-null  int64  \n",
-      " 22  창고입고         21084 non-null  object \n",
-      " 23  창고입고수량       21084 non-null  int64  \n",
-      " 24  Control No.  14958 non-null  object \n",
-      " 25  입고창고         21084 non-null  object \n",
-      " 26  창고출고         19421 non-null  object \n",
-      " 27  창고출고수량       21084 non-null  int64  \n",
-      " 28  출고선박         19421 non-null  object \n",
-      " 29  출고운반선        19421 non-null  object \n",
-      " 30  선박입고수량       21084 non-null  int64  \n",
-      "dtypes: float64(3), int64(6), object(22)\n",
-      "memory usage: 5.0+ MB\n"
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   청구서번호        20517 non-null  object\n",
+      " 1   No.          20517 non-null  int64 \n",
+      " 2   Subject      20517 non-null  object\n",
+      " 3   Machinery    20517 non-null  object\n",
+      " 4   Assembly     20517 non-null  object\n",
+      " 5   청구품목         20517 non-null  object\n",
+      " 6   Part No.1    20517 non-null  object\n",
+      " 7   key1         20517 non-null  object\n",
+      " 8   key2         20517 non-null  object\n",
+      " 9   리드타임_음수제거    20517 non-null  int64 \n",
+      " 10  청구량          20517 non-null  int64 \n",
+      " 11  견적           20517 non-null  object\n",
+      " 12  견적수량         20517 non-null  int64 \n",
+      " 13  견적화폐         20517 non-null  object\n",
+      " 14  견적단가         20517 non-null  int64 \n",
+      " 15  발주번호         20517 non-null  object\n",
+      " 16  발주처          20517 non-null  object\n",
+      " 17  발주           20517 non-null  object\n",
+      " 18  발주수량         20517 non-null  int64 \n",
+      " 19  발주금액         20517 non-null  int64 \n",
+      " 20  D/T          20517 non-null  object\n",
+      " 21  리드타임         20517 non-null  int64 \n",
+      " 22  창고입고         20517 non-null  object\n",
+      " 23  창고입고수량       20517 non-null  int64 \n",
+      " 24  Control No.  20517 non-null  object\n",
+      " 25  입고창고         20517 non-null  object\n",
+      " 26  창고출고         20517 non-null  object\n",
+      " 27  창고출고수량       20517 non-null  int64 \n",
+      " 28  출고선박         20517 non-null  object\n",
+      " 29  출고운반선        20517 non-null  object\n",
+      " 30  선박입고수량       20517 non-null  int64 \n",
+      "dtypes: int64(11), object(20)\n",
+      "memory usage: 4.9+ MB\n"
      ]
     }
    ],
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "37b02e4a-fb74-411d-bee4-953dc63775df",
    "metadata": {
     "tags": []
@@ -745,7 +746,8 @@
     "\n",
     "\n",
     "# CNN Layer\n",
-    "cnn_output = Conv1D(filters=128, kernel_size=1, activation='relu')(merged_output)  # kernel_size 수정\n",
+    "# cnn_output = Conv1D(filters=128, kernel_size=1, activation='relu')(merged_output)  # kernel_size 수정\n",
+    "cnn_output = Conv1D(filters=128, kernel_size=7, activation='relu')(merged_output)  # kernel_size 수정\n",
     "cnn_output = GlobalMaxPooling1D()(cnn_output)\n",
     "\n",
     "# LSTM Layer\n",
