--- a/DA/notebooks/t.ipynb
+++ b/DA/notebooks/t.ipynb
@@ -2347,19 +2347,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "082d581a-ed21-4f15-9ca4-785bd347a50a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.10.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "print(tf.__version__)\n",
+    "\n",
+    "\n",
+    "tf.config.list_physical_devices('GPU') #2.xx 부터는 gpu_available 대신 이렇게 하라고 한다"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7a70a83b-1cd8-4c5e-9b6f-321af0c3a0fa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[name: \"/device:CPU:0\"\n",
+       " device_type: \"CPU\"\n",
+       " memory_limit: 268435456\n",
+       " locality {\n",
+       " }\n",
+       " incarnation: 15435387351917438648\n",
+       " xla_global_id: -1,\n",
+       " name: \"/device:GPU:0\"\n",
+       " device_type: \"GPU\"\n",
+       " memory_limit: 5840935321\n",
+       " locality {\n",
+       "   bus_id: 1\n",
+       "   links {\n",
+       "   }\n",
+       " }\n",
+       " incarnation: 16157180886937604897\n",
+       " physical_device_desc: \"device: 0, name: GeForce RTX 2070, pci bus id: 0000:01:00.0, compute capability: 7.5\"\n",
+       " xla_global_id: 416903419]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from tensorflow.python.client import device_lib\n",
+    "device_lib.list_local_devices()"
+   ]
   },
   {
    "cell_type": "code",
