--- a/DA/notebooks/classification_deeplearning.ipynb
+++ b/DA/notebooks/classification_deeplearning.ipynb
@@ -1571,9 +1571,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv1",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
