--- a/DA/notebooks/embeddinglayer.ipynb
+++ b/DA/notebooks/embeddinglayer.ipynb
@@ -3123,6 +3123,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "581e8c4a",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 209,
    "id": "0e287140-f77f-45fa-a942-346a3a1204e3",
@@ -3293,7 +3299,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv1",
+   "display_name": "venv",
    "language": "python",
    "name": "venv"
   },
