--- a/DA/notebooks/feature_engineering.ipynb
+++ b/DA/notebooks/feature_engineering.ipynb
@@ -1742,14 +1742,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88413c3b-0d55-4e72-8217-2df3f38c5504",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "8d952a4b-bd53-4318-ae85-c0075df4888e",
    "metadata": {},
    "outputs": [],
@@ -1766,9 +1758,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv1",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
