--- a/DA/notebooks/t.ipynb
+++ b/DA/notebooks/t.ipynb
@@ -2420,7 +2420,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv1",
+   "display_name": "venv",
    "language": "python",
    "name": "venv"
   },
