--- a/DA/notebooks/t2.ipynb
+++ b/DA/notebooks/t2.ipynb
@@ -1726,7 +1726,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv1",
+   "display_name": "venv",
    "language": "python",
    "name": "venv"
   },
